# warid

./: Cargo.toml  Trunk.toml
src/: main.rs
static/: index.html
