[package]
name = "warid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.58"
wasm-bindgen = "0.2.81"
serde_json = "1.0.81"
serde = "1.0.137"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'MouseScrollEvent',
  'CssStyleDeclaration',
]